--- a/client/src/css files/Login-SignUp.css
+++ b/client/src/css files/Login-SignUp.css
@@ -34,11 +34,10 @@
     box-shadow: 0 0 15px 0 var(--color);
     padding: 40px 30px;
     width: 80%;
+    height: 90vh;
     max-width: 600px;
     border-radius: 20px;
     opacity: 0.7;
-    margin-top: 10px;
-    margin-bottom: 10px;
   }
   
   .login-title {
@@ -52,14 +51,14 @@
   .form {
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    margin-top: 40px;
+    gap: 5px;
+    /* margin-top: 40px; */
   }
   
   .input-group {
     display: flex;
     flex-direction: column;
-    gap: 7px;
+    gap: 4px;
   }
   
   .input-group label {
